# machine-learning-for-trading

./: .gitignore  README.md  Untitled.ipynb  docker-compose.yml  docker-entrypoint.sh  env14aug.yaml  pyproject.toml
.Trash-0/files/: entest.py
.Trash-0/info/: entest.py.trashinfo
.virtual_documents/05_strategy_evaluation/: 01_backtest_with_trades.ipynb  03_pyfolio_demo.ipynb  04_mean_variance_optimization.ipynb
02_market_and_fundamental_data/01_NASDAQ_TotalView-ITCH_Order_Book/: 01_parse_itch_order_flow_messages.ipynb  02_rebuild_nasdaq_order_book.ipynb  03_normalize_tick_data.ipynb
02_market_and_fundamental_data/02_algoseek_intraday/: algoseek_minute_data.ipynb
02_market_and_fundamental_data/03_data_providers/: 01_pandas_datareader_demo.ipynb  02_yfinance_demo.ipynb  03_lobster_itch_data.ipynb  04_quandl_demo.ipynb  05_zipline_data_demo.ipynb  dma.pickle  stock_data.csv
02_market_and_fundamental_data/05_storage_benchmark/: storage_benchmark.ipynb
04_alpha_factor_research/: 01_feature_engineering.ipynb  02_how_to_use_talib.ipynb  03_kalman_filter_and_wavelets.ipynb  04_single_factor_zipline.ipynb  06_performance_eval_alphalens.ipynb
05_strategy_evaluation/: 01_backtest_with_trades.ipynb  02_backtest_with_pf_optimization.ipynb  03_pyfolio_demo.ipynb  04_mean_variance_optimization.ipynb  05_kelly_rule.ipynb
06_machine_learning_process/: 01_machine_learning_workflow.ipynb
07_linear_models/: 03_preparing_the_model_data.ipynb  04_statistical_inference_of_stock_returns_with_statsmodels.ipynb  05_predicting_stock_returns_with_linear_regression.ipynb  06_evaluating_signals_using_alphalens.ipynb  07_logistic_regression_macro_data.ipynb  08_predicting_price_movements_with_logistic_regression.ipynb
08_ml4t_workflow/: 02_vectorized_backtest.ipynb
08_ml4t_workflow/04_ml4t_workflow_with_zipline/: 02_backtesting_with_zipline.ipynb
11_decision_trees_random_forests/: 00_data_prep.ipynb  01_decision_trees.ipynb  04_japanese_equity_features.ipynb
17_deep_learning/: 01_build_and_train_feedforward_nn.ipynb  03_how_to_use_pytorch.ipynb  04_optimizing_a_NN_architecture_for_trading.ipynb  05_backtesting_with_zipline.ipynb
Notebooks/: 04_japanese_equity_features.ipynb  05_random_forest_return_signals.ipynb
Notebooks/FAAFO/: Untitled.ipynb  Untitled1.ipynb  gex.ipynb  gex2.ipynb  gex_ml.py  gex_scalp.ipynb  gex_text.py  package-lock.json  package.json
Notebooks/Strategies/: 01_Nadayara_Watson_Strategy_15Min(1).ipynb  EURUSD_Candlestick_15_M_BID_01.02.2023-17.02.2024.csv  MyStrat.html  NW_EMA.ipynb  NW_EMA_TSL.ipynb  NW_EMA_TSL_HIST.py  auoftf.py  auoftf_2.py  auoftf_2_1.py  auoftf_3.py  auoftf_4.py  auoftf_4_1.py  auoftf_5.py  ayoftf.ipynb  basanaTest.py  candles.py  candles_bokeh.py  candles_qt.py  candles_qt_2.py  candles_qt_2_2.py  live_trading_plot.html  qtStratV1.py  qtStratV10.py  qtStratV11.py  qtStratV2.py  qtStratV3.py  qtStratV4.py  qtStratV5.py  qtStratV6.py  qtStratV7.py  qtStratV8.py  qtStratV9.py  test.ipynb  trade_log.csv  v1chart.py  v6v2.py  v6v3.py  v6v4.py  v6v5.py
Notebooks/Strategies/RF_WMA_BollingerBands/: README.md
Notebooks/Strategies/mappings/: imappings.txt  mappings.txt  vmappings.txt
Notebooks/Strategies/z/notebooks/: feature_extraction.ipynb  main.ipynb
Notebooks/scripts/: custom_min_loader.py  jitt.py
data/: create_datasets.ipynb  create_stooq_data.ipynb  glove_word_vectors.ipynb
docker/: Dockerfile.applesilicon  Dockerfile.dev  Dockerfile.notebook  Dockerfile.x86
installation/macosx/: ml4t.yml
