[tool.poetry]
name = "ml4t-project"
version = "0.1.0"
description = "Machine Learning for Trading project"
authors = ["0xrushi"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
anyio = "4.4.0"
appnope = "0.1.4"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "24.2.0"
babel = "2.14.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
cached-property = "1.5.2"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
comm = "0.2.2"
debugpy = "1.8.5"
decorator = "5.1.1"
defusedxml = "0.7.1"
entrypoints = "0.4"
exceptiongroup = "1.2.2"
executing = "2.0.1"
fqdn = "1.5.1"
h11 = "0.14.0"
h2 = "4.1.0"
httpcore = "1.0.5"
httpx = "0.27.0"
hpack = "4.0.0"
hyperframe = "6.0.0"
idna = "3.7"
importlib-metadata = "8.2.0"
importlib_resources = "6.4.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
ipywidgets = "8.1.3"
isoduration = "20.11.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
joblib = "1.4.2"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-lsp = "2.2.5"
jupyter_client = "8.6.2"
jupyter_core = "5.7.2"
jupyter_events = "0.10.0"
jupyter_server = "2.14.2"
jupyter_server_terminals = "0.5.3"
jupyterlab = "4.2.4"
jupyterlab_pygments = "0.3.0"
jupyterlab_server = "2.27.3"
jupyterlab_widgets = "3.0.11"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
nbclient = "0.10.0"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
notebook-shim = "0.2.4"
numexpr = "2.10.0"
numpy = "1.26.4"
overrides = "7.7.0"
packaging = "24.1"
pandocfilters = "1.5.0"
parso = "0.8.4"
pexpect = "4.9.0"
pickleshare = "0.7.5"
platformdirs = "4.2.2"
prometheus_client = "0.20.0"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
py-cpuinfo = "9.0.0"
pycparser = "2.22"
pygments = "2.18.0"
pysocks = "1.7.1"
python-json-logger = "2.0.7"
pytz = "2024.1"
pyyaml = "6.0.2"
pyzmq = "26.1.0"
referencing = "0.35.1"
requests = "2.32.3"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.20.0"
scikit-learn = "1.5.1"
scipy = "1.14.0"
send2trash = "1.8.3"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.5"
stack_data = "0.6.2"
ta-lib = "0.4.32"
terminado = "0.18.1"
threadpoolctl = "3.5.0"
tinycss2 = "1.3.0"
tomli = "2.0.1"
toolz = "0.12.1"
tornado = "6.4.1"
trading-calendars = "2.1.1"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20240316"
typing-extensions = "4.12.2"
typing_utils = "0.1.0"
uri-template = "1.3.0"
urllib3 = "2.2.2"
wcwidth = "0.2.13"
webcolors = "24.8.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
widgetsnbextension = "4.0.11"
zipp = "3.19.2"
zstandard = "0.23.0"
alembic = "1.13.2"
alphalens-reloaded = "0.4.4"
bcolz-zipline = "1.2.9"
black = "24.8.0"
bottleneck = "1.4.0"
clarabel = "0.9.0"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.1"
cvxpy = "1.5.2"
cycler = "0.12.1"
ecos = "2.0.14"
empyrical = "0.5.5"
empyrical-reloaded = "0.5.10"
exchange-calendars = "4.5.5"
fonttools = "4.53.1"
h5py = "3.11.0"
inflection = "0.5.1"
intervaltree = "3.1.0"
iso3166 = "2.1.1"
iso4217 = "1.12.20240625"
kiwisolver = "1.4.5"
korean-lunar-calendar = "0.3.1"
logbook = "1.7.0.post0"
lru-dict = "1.3.0"
lxml = "5.3.0"
mako = "1.3.5"
matplotlib = "3.6.3"
more-itertools = "10.4.0"
mpmath = "1.3.0"
multipledispatch = "1.0.0"
mypy-extensions = "1.0.0"
nbcommands = "0.5.1"
networkx = "3.3"
osqp = "0.6.7.post1"
pandas = "1.5.3"
pandas-datareader = "0.10.0"
pathspec = "0.12.1"
patsy = "0.5.6"
peewee = "3.17.3"
pillow = "10.4.0"
pyfolio-reloaded = "0.9.7"
pyluach = "2.2.0"
pyparsing = "3.1.2"
pyportfolioopt = "1.5.5"
python-dateutil = "2.9.0.post0"
python-interface = "1.6.1"
qdldl = "0.1.7.post4"
quandl = "3.7.0"
scs = "3.2.6"
seaborn = "0.13.2"
sortedcontainers = "2.4.0"
sqlalchemy = "2.0.32"
statsmodels = "0.14.2"
sympy = "1.13.2"
yellowbrick = "1.5"
zipline-reloaded = "3.0.4"
backtesting = "^0.3.3"
yfinance = "0.2.41"
lightgbm = "^4.5.0"
mlflow = "^2.15.1"
jupyter = "^1.0.0"
tqdm = "^4.66.5"

[tool.poetry.extras]
all = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"